code25_all/scala/7695270.txt
List(true,false).filter(_).size

<console>:8: error: missing parameter type for expanded function 
((x$1) => List(true, false).filter(x$1).size)
    List(true,false).filter(_).size
                            ^

List(true,false).filter(a => a).size

